@@ -15,8 +15,8 @@ function pretty_generate_url($text)
 		'ae'	=>	array ('æ', 'Æ'),
 		'b'	=>	array ('b', 'B'),
 		'c'	=>	array ('c', 'C', 'ç', 'Ç', 'ć', 'Ć', 'č', 'Č'),
-		'd'	=>	array ('d', 'D', 'Ð', 'đ', 'Đ'),
-		'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë', 'ę', 'Ę', 'е', 'Е', 'ё', 'Ё', 'э', 'Э', 'Ẹ', 'ẹ', 'Ẻ', 'ẻ', 'Ẽ', 'ẽ', 'Ề', 'ề', 'Ế', 'ế', 'Ệ', 'ệ', 'Ể', 'ể', 'Ễ', 'ễ', 'ε', 'Ε'),
+		'd'	=>	array ('d', 'D', 'Ð', 'đ', 'Đ', 'ď', 'Ď'),
+		'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë', 'ę', 'Ę', 'е', 'Е', 'ё', 'Ё', 'э', 'Э', 'Ẹ', 'ẹ', 'Ẻ', 'ẻ', 'Ẽ', 'ẽ', 'Ề', 'ề', 'Ế', 'ế', 'Ệ', 'ệ', 'Ể', 'ể', 'Ễ', 'ễ', 'ε', 'Ε', 'ě', 'Ě'),
 		'f'	=>	array ('f', 'F'),
 		'g'	=>	array ('g', 'G', 'ğ', 'Ğ'),
 		'h'	=>	array ('h', 'H'),
@@ -25,15 +25,15 @@ function pretty_generate_url($text)
 		'k'	=>	array ('k', 'K', 'к', 'К', 'κ', 'Κ'),
 		'l'	=>	array ('l', 'L', 'ł', 'Ł'),
 		'm'	=>	array ('m', 'M', 'м', 'М', 'Μ'),
-		'n'	=>	array ('n', 'N', 'ñ', 'Ñ', 'ń', 'Ń'),
+		'n'	=>	array ('n', 'N', 'ñ', 'Ñ', 'ń', 'Ń', 'ň', 'Ň'),
 		'o'	=>	array ('o', 'O', 'ò', 'Ò', 'ó', 'Ó', 'ô', 'Ô', 'õ', 'Õ', 'ö', 'Ö', 'ø', 'Ø', 'º', 'о', 'О', 'Ọ', 'ọ', 'Ỏ', 'ỏ', 'Ộ', 'ộ', 'Ố', 'ố', 'Ỗ', 'ỗ', 'Ồ', 'ồ', 'Ổ', 'ổ', 'Ơ', 'ơ', 'Ờ', 'ờ', 'Ớ', 'ớ', 'Ợ', 'ợ', 'Ở', 'ở', 'Ỡ', 'ỡ', 'ο', 'Ο'),
 		'p'	=>	array ('p', 'P'),
 		'q'	=>	array ('q', 'Q'),
-		'r'	=>	array ('r', 'R'),
+		'r'	=>	array ('r', 'R', 'ř', 'Ř'),
 		's'	=>	array ('s', 'S', 'ş', 'Ş', 'ś', 'Ś', 'š', 'Š'),
 		'ss'	=>	array ('ß'),
-		't'	=>	array ('t', 'T', 'т', 'Т', 'τ', 'Τ', 'ţ', 'Ţ'),
-		'u'	=>	array ('u', 'U', 'ù', 'Ù', 'ú', 'Ú', 'û', 'Û', 'ü', 'Ü', 'Ụ', 'ụ', 'Ủ', 'ủ', 'Ũ', 'ũ', 'Ư', 'ư', 'Ừ', 'ừ', 'Ứ', 'ứ', 'Ự', 'ự', 'Ử', 'ử', 'Ữ', 'ữ'),
+		't'	=>	array ('t', 'T', 'т', 'Т', 'τ', 'Τ', 'ţ', 'Ţ', 'ť', 'Ť'),
+		'u'	=>	array ('u', 'U', 'ù', 'Ù', 'ú', 'Ú', 'û', 'Û', 'ü', 'Ü', 'Ụ', 'ụ', 'Ủ', 'ủ', 'Ũ', 'ũ', 'Ư', 'ư', 'Ừ', 'ừ', 'Ứ', 'ứ', 'Ự', 'ự', 'Ử', 'ử', 'Ữ', 'ữ', 'ů', 'Ů'),
 		'v'	=>	array ('v', 'V'),
 		'w'	=>	array ('w', 'W'),
 		'x'	=>	array ('x', 'X', '×'),
